--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <li>PHP</li>
             <img src="php.jpg" alt="Gambar PHP" width="15%" height="15%" title="Gambar PHP">
             <li>C++</li>
-            <img src="c++.png" alt="Gambar C++" width="15%" height="15%" title="Gambar C++">
+            <img src="c++.jpg" alt="Gambar C++" width="15%" height="15%" title="Gambar C++">
         </ol>
     </div>
 
