--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <li>HTML</li>
             <img src="html.png" alt="Gambar HTML 5" width="10%" height="10%" title="Gambar HTML 5">
             <li>CSS</li>
-            <img src="css.png" alt="Gambar CSS 3" width="15%" height="15%" title="Gambar CSS 3">
+            <img src="CSS.png" alt="Gambar CSS 3" width="15%" height="15%" title="Gambar CSS 3">
             <li>JavaScript</li>
             <img src="js.jpg" alt="Gambar JavaScript" width="15%" height="15%" title="Gambar JavaScript">
             <li>PHP</li>
