--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <li>Bahasa Pemrograman: Bahasa pemrograman adalah bahasa formal yang berisi seperangkat instruksi yang
                     digunakan untuk menghasilkan berbagai jenis output.</li>
             </ul </p> Lebih simple nya bahasa markup itu ada di bagian <b>front-end untuk mengatur tampilan halaman
-            web</b>,
+            web</b>
             sedangkan bahasa pemrogramman adalah <b>back-end untuk mengatur sebuah database pada halaman web</b>.
         </p>
 
@@ -44,19 +44,19 @@
         <ol>
             <li>HTML</li>
             <img src="html.png" alt="Gambar HTML 5" width="10%" height="10%" title="Gambar HTML 5">
-            <li>CSS</li>
-            <img src="CSS.png" alt="Gambar CSS 3" width="15%" height="15%" title="Gambar CSS 3">
             <li>JavaScript</li>
-            <img src="js.jpg" alt="Gambar JavaScript" width="15%" height="15%" title="Gambar JavaScript">
+            <img src="js.jpg" alt="Gambar JavaScript" width="15%" height="80px" title="Gambar JavaScript">
             <li>PHP</li>
             <img src="php.jpg" alt="Gambar PHP" width="15%" height="15%" title="Gambar PHP">
             <li>C++</li>
-            <img src="c++.jpg" alt="Gambar C++" width="15%" height="15%" title="Gambar C++">
+            <img src="c++.jpg" alt="Gambar C++" width="12%" height="15%" title="Gambar C++">
         </ol>
     </div>
 
     <div class="footer">
         &copy; Muhammad Febrian
+        <p>Semoga platform Coding-in dapat membantu belajar nya. &#128522 <br>Perdalam ilmu nya dan jangan lupa
+            berikan manfaat nya. &#128536</p> <br>
     </div>
 
 
